# 96well

./: .env.example  .env.production.example  .env.research-public.example  .gitignore  README.md  TODO.md  middleware.ts  netlify.toml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
docs/deployment/: README.md  environment-variables.md  pre-production-checklist.md  production-deployment-runbook.md  production-evidence-template.md  production-smoke-test.md  research-local-checklist.md  research-local-runbook.md  research-local-smoke-test.md  rollback-runbook.md
docs/release/: 2026-06-30-release-readiness.md  2026-07-01-research-local-release-notes.md  2026-07-01-research-local-release.md  2026-07-02-research-local-v0.2.0-release-notes.md  (+4 more)
e2e/: breakpoint-management.spec.ts  image-review.spec.ts  offline-conflict.spec.ts  sample-to-plate.spec.ts
image-service/: pyproject.toml
image-service/app/: __init__.py  analyzer.py  main.py  models.py
image-service/mic_plate_image_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
image-service/scripts/: generate_sample.py
image-service/tests/: __init__.py  synthetic_plate.py  test_analyzer.py
prisma/: schema.prisma  seed.ts
public/: sw.js
scripts/: generate-sample-export.ts  init-sqlite.mjs  postgres-backup-restore-check.sh  postgres-baseline-check.ts  postgres-baseline.ts  postgres-runtime-check.ts  postgres-schema-check.ts  postgres-schema-diff.ts  postgres-utils.ts  research-public-invite.ts
src/: middleware.test.ts
(+126 files in other folders)
