[project]
name = "mic-plate-image-service"
version = "0.1.0"
description = "OpenCV-assisted 96-well plate image analysis MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "python-multipart>=0.0.20,<1",
  "opencv-python-headless>=4.10,<5",
  "numpy>=2.0,<3",
]

[project.optional-dependencies]
test = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

